# boostpow-cpuminer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  UserGuide.md  conanfile.old  conanfile.py  conanfile.txt
.circleci/: config.yml
.github/workflows/: stable_builds.yml  tests.yml
include/: jobs.hpp  keys.hpp  logger.hpp  miner.hpp  miner_options.hpp  network.hpp  pow_co_api.hpp  random.hpp  wallet.hpp  whatsonchain_api.hpp
src/: CMakeLists.txt  boost_miner.cpp  boost_stratum.cpp  check_API.cpp  cosmos.cpp  detect_boost.cpp  jobs.cpp  logger.cpp  miner.cpp  miner_options.cpp  network.cpp  pow_co_api.cpp  split_outputs.cpp  wallet.cpp  whatsonchain_api.cpp
test/: CMakeLists.txt  test_detect_boost.cpp  test_program_options.cpp
tests/: CMakeLists.txt  testTests.cpp
